加入了文章版权声明显示和前台的语言切换菜单和组件
1. 英文翻译补充
2. 前台加入了语言切换菜单和组件
3. 后台加入了语言切换菜单的开关
4. 加入了文章版权声明显示和设置
5. 增加一个语言切换按钮的图标
6. 网站统计页面的图表去除了标题
7. 网站统计页面的日历图高亮的数值改为根据文章和评论数量动态生成，避免文章和评论数量超出预设的数值导致日历高亮失效
8. 调整了移动设备小头图模式的评论数显示，避免英文过长导致宽度不够

--- a/assets/css/dark-color.scss
+++ b/assets/css/dark-color.scss
@@ -192,6 +192,14 @@ $dark-text-color2: #999999;
         color: #fff;
       }
 
+      // 下拉菜单
+      .dropdown-menu {
+        background: #25252C;
+        a {
+          color: $dark-text-color;
+        }
+      }
+
       // 搜索框
       input[type="search"] {
         background: #25252C;
@@ -314,8 +322,8 @@ $dark-text-color2: #999999;
         color: $dark-text-color;
       }
     }
-    // 切换配色模式区域
-    .change-color label {
+    // 切换配色模式区域和切换语言
+    .change-color label, .language-select label {
       color: $dark-text-color;
     }
     // 最新评论区域
