调整了文章章节目录的地址和加入了目录高亮效果
1. 章节目录的跳转地址从之前的随机地址改为固定地址
2. 章节目录加入了高亮效果，可以根据可视区的标题位置高亮对应的目录链接

--- a/assets/css/dark-color.scss
+++ b/assets/css/dark-color.scss
@@ -349,6 +349,11 @@ $dark-text-color2: #999999;
         color: $dark-link-color;
       }
     }
+    // 侧边栏的目录高亮
+    .directory-active {
+      font-weight: 600;
+      color: #FFFFFF;
+    }
   }
 
   // 移动设备目录配色
@@ -360,7 +365,12 @@ $dark-text-color2: #999999;
       }
     }
     a {
-      color: $dark-link-color;
+      color: $dark-text-color;
+    }
+    // 移动设备目录高亮
+    .directory-active {
+      font-weight: 600;
+      color: #FFFFFF;
     }
   }
 
