--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 * HomePage: https://www.misterma.com
 * GithubPage: https://github.com/changbin1997
 * ProjectPage: https://github.com/changbin1997/Facile
-* author: Changbin (changbin1997)
+* author: Mr. Ma
 * Licensed under MIT
 */
 
