--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -799,48 +799,87 @@ header input[type=search]:focus {
   }
 }
 #max-img-box {
-  display: none;
-}
-#max-img-box #max-img-bg {
-  display: none;
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1200;
-}
-#max-img-box .max-img-features-btn {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  z-index: 1203;
+  background: rgba(0, 0, 0, 0.8);
   display: none;
+  z-index: 2000;
 }
-#max-img-box .max-img-features-btn button {
+#max-img-box #img-counter {
+  text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
+  color: #FFFFFF;
+  font-size: 16px;
+  position: absolute;
+  top: 10px;
+  z-index: 2002;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  line-height: 38px;
+}
+#max-img-box .btn-bar {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 2002;
+}
+#max-img-box .btn-bar button {
   color: #FFFFFF;
   text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
-  font-size: 15px;
+  font-size: 16px;
 }
-#max-img-box .max-img-features-btn button:hover {
+#max-img-box .btn-bar button:hover {
   color: #F7E6D2;
 }
-#max-img-box #img-info {
-  position: fixed;
-  bottom: 30px;
-  left: 50%;
-  transform: translate(-50%, 0);
-  font-size: 16px;
-  text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
-  z-index: 1203;
-  display: none;
-}
-#max-img-box #max-img {
+#max-img-box .previous-image, #max-img-box .next-image {
+  padding: 2px 14px;
+  font-size: 40px;
   position: absolute;
-  cursor: move;
-  display: none;
-  z-index: 1201;
+  z-index: 2002;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #FFFFFF;
+  text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
+}
+#max-img-box .previous-image:hover, #max-img-box .next-image:hover {
+  text-decoration: none;
+}
+#max-img-box .previous-image {
+  left: 20px;
+}
+#max-img-box .next-image {
+  right: 20px;
+}
+#max-img-box #img-alt {
+  text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
+  color: #FFFFFF;
+  font-size: 16px;
+  position: absolute;
+  bottom: 30px;
+  z-index: 2002;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  width: 90%;
+  text-align: center;
+}
+#max-img-box .change-img-animation {
+  animation: fadeIn 0.25s ease-in-out;
+  transition: width 0.25s, height 0.25s, left 0.25s, top 0.25s;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#max-img {
+  position: absolute;
+  z-index: 2001;
 }
 
 .stop-scrolling {
@@ -1177,6 +1216,7 @@ header input[type=search]:focus {
     max-height: 80px;
     overflow-y: hidden;
   }
+
   .post-page .post-title {
     font-size: 28px;
     font-weight: 700;
@@ -1197,6 +1237,7 @@ header input[type=search]:focus {
     max-height: 60px;
     overflow-y: hidden;
   }
+
   .post-page .post-title {
     font-size: 28px;
     font-weight: 700;
@@ -1208,6 +1249,7 @@ header input[type=search]:focus {
   .post-page .post-title a:hover {
     text-decoration: none;
   }
+
   #comments .comments-lists .comment-children {
     margin-left: 21px;
   }
@@ -1217,8 +1259,21 @@ header input[type=search]:focus {
   #comments #emoji-panel {
     width: 93% !important;
   }
+
   .load-img {
     height: 200px !important;
+  }
+
+  #max-img-box #img-counter {
+    margin: 0;
+    left: 15px;
+    transform: translateX(0);
+  }
+  #max-img-box .previous-image {
+    left: 0;
+  }
+  #max-img-box .next-image {
+    right: 0;
   }
 }
 .light-color {
@@ -1473,9 +1528,9 @@ header input[type=search]:focus {
     color: rgba(0, 0, 0, 0.3);
   }
   .auto-color header .navbar .navbar-nav .show > .nav-link,
-  .auto-color header .navbar .navbar-nav .active > .nav-link,
-  .auto-color header .navbar .navbar-nav .nav-link.show,
-  .auto-color header .navbar .navbar-nav .nav-link.active {
+.auto-color header .navbar .navbar-nav .active > .nav-link,
+.auto-color header .navbar .navbar-nav .nav-link.show,
+.auto-color header .navbar .navbar-nav .nav-link.active {
     color: rgba(0, 0, 0, 0.9);
   }
   .auto-color header .navbar .navbar-toggler {
@@ -2223,9 +2278,9 @@ header input[type=search]:focus {
     color: rgba(255, 255, 255, 0.25);
   }
   .auto-color header .navbar .navbar-nav .show > .nav-link,
-  .auto-color header .navbar .navbar-nav .active > .nav-link,
-  .auto-color header .navbar .navbar-nav .nav-link.show,
-  .auto-color header .navbar .navbar-nav .nav-link.active {
+.auto-color header .navbar .navbar-nav .active > .nav-link,
+.auto-color header .navbar .navbar-nav .nav-link.show,
+.auto-color header .navbar .navbar-nav .nav-link.active {
     color: #fff;
   }
   .auto-color header .navbar .navbar-toggler {
