--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -408,7 +408,7 @@ header {
         height: 56px;
         flex: none;
       }
-      .pingback {
+      .text-avatar {
         font-size: 20px;
         line-height: 56px;
       }
